<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_stock"
        android:icon="@drawable/ic_trend"
        android:title="@string/title_stock" />

    <item
        android:id="@+id/navigation_purchases"
        android:icon="@drawable/ic_purchases"
        android:title="@string/title_purchases" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_invoice"
        android:icon="@drawable/ic_invoice"
        android:title="@string/title_invoice" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more" />

</menu>