<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_stock"
        android:name="com.cybereast.p003spos_android.ui.fragments.stockmanagementFragment.StockManagementFragment"
        android:label="@string/title_stock"
        tools:layout="@layout/fragment_stock_managment" />

    <fragment
        android:id="@+id/navigation_purchases"
        android:name="com.cybereast.p003spos_android.ui.fragments.purchasesFragment.PurchaseManagementFragment"
        android:label="@string/title_purchases"
        tools:layout="@layout/fragment_purchases_management" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.cybereast.p003spos_android.ui.fragments.dashboardFragment.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_invoice"
        android:name="com.cybereast.p003spos_android.ui.fragments.invoiceFragment.InvoiceFragment"
        android:label="@string/title_invoice"
        tools:layout="@layout/invoice_fragment" />
    <fragment
        android:id="@+id/navigation_more"
        android:name="com.cybereast.p003spos_android.ui.fragments.moreFragment.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/more_fragment" />
</navigation>