<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/_20dp"
    android:orientation="vertical"
    android:padding="@dimen/_20dp"
    tools:context=".ui.fragments.addEditProductFragment.AddEditProductFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvH"
        style="@style/headingTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_product" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etProductName"
        style="@style/editTextHintStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/product_name"
        android:inputType="text"
        android:paddingHorizontal="@dimen/_10dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etProductPurchasePrice"
        style="@style/editTextHintStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/product_purchase_price"
        android:inputType="numberDecimal"
        android:paddingHorizontal="@dimen/_10dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etProductSalePrice"
        style="@style/editTextHintStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/product_sale_price"
        android:inputType="numberDecimal"
        android:paddingHorizontal="@dimen/_10dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etProductQuantity"
        style="@style/editTextHintStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/product_quantity"
        android:inputType="number"
        android:paddingHorizontal="@dimen/_10dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etProductDetail"
        style="@style/editTextHintStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/product_description"
        android:inputType="text"
        android:paddingHorizontal="@dimen/_10dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddEditProduct"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/shape_button"
        android:text="@string/add_product" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnClose"
        style="@style/headingTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/close" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

</androidx.appcompat.widget.LinearLayoutCompat>