<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="@dimen/_10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_24dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/confirmation"
            android:textColor="@color/blue"
            android:textSize="@dimen/_14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSurelyMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_24dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to"
            android:textColor="@color/lightBlue"
            android:textSize="@dimen/_14sp"
            app:layout_constraintBottom_toTopOf="@+id/CenterSpace"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <View
            android:id="@+id/topSpace"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:background="@color/blue"
            app:layout_constraintTop_toTopOf="@+id/CenterSpace" />

        <View
            android:id="@+id/CenterSpace"
            android:layout_width="@dimen/_1dp"
            android:layout_height="@dimen/_50dp"
            android:background="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btnYes"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_0dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/CenterSpace"
            app:layout_constraintTop_toTopOf="@+id/CenterSpace" />

        <TextView
            android:id="@+id/btnNo"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_0dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/CenterSpace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/CenterSpace" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>