<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".ui.fragments.invoiceFragment.InvoiceFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_marginBottom="@dimen/_5dp"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/_5dp"
        app:layout_constraintBottom_toTopOf="@+id/invoiceBtn"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_invoice" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/invoiceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/shape_button"
        android:paddingHorizontal="@dimen/_30dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBalanceValue"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:text="Rs. 35000/-"
        android:textColor="@color/colorGreen"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/centerLine"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBalance"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:text="@string/billing_amount"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/invoiceBtn"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBill"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:text="@string/total_rs"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/invoiceBtn" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBillValue"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvBill" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addProductButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_20dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textNoDataFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_data_found"
        android:textColor="@color/blue"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>