<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="click"
            type="com.cybereast.p003spos_android.data.interfaces.AdapterOnClick" />

        <variable
            name="obj"
            type="com.cybereast.p003spos_android.models.ProductModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:background="@color/colorGrey"
        app:cardCornerRadius="@dimen/_5dp"
        app:cardElevation="@dimen/_4dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10dp">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProductName"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10dp"
                android:layout_marginVertical="@dimen/_10dp"
                android:text="@string/name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:id="@+id/layoutProductNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_marginVertical="@dimen/_10dp"
                app:layout_constraintStart_toEndOf="@+id/tvProductName"
                app:layout_constraintTop_toBottomOf="@+id/tvProductName"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvProductNameValue"
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{obj.productName}"
                    android:textColor="@color/color_9C27B0" />
            </HorizontalScrollView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProductPrice"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10dp"
                android:layout_marginVertical="@dimen/_10dp"
                android:text="@string/price"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProductName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProductPriceValue"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10dp"
                android:text="@{obj.productSalePrice.toString()}"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/layoutProductNameValue"
                app:layout_constraintTop_toBottomOf="@+id/tvProductName" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProductQuantity"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10dp"
                android:layout_marginVertical="@dimen/_10dp"
                android:text="@string/quantity"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvProductPriceValue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProductQuantityValue"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_marginVertical="@dimen/_10dp"
                android:text="@{obj.productQuantity.toString()}"
                android:textColor="@color/colorBlue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvProductQuantity" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>